style.css
/*
Theme Name:     Library
Description:    Child theme of CWD 
Author:         Andrew Beeken
Template:       CWD3.1-WordPress-theme
Version:        1
*/

@import url("../CWD3.1-WordPress-theme/style.css");

body{
	background: #eee;
}

#cwd_blog_panel{
	height: 105px;
}

h1{
	font-size: 24px;
}

.widget_search .screen-reader-text,
.widget_search br{
	display: none;
}

/*Homepage*/
.library-home.column{
	width: 298px;
}

/*Menus*/
#cwd_navigation ul{
	z-index: 999;
}

/*Nometa pages*/
.nometa h1.padding_top{
	padding-top: 5px;
}

/*Slider*/
#wpcontent_slider{
	border: 0 ! important;
}

/*Breadcrumbs*/
.breadcrumbs{
	font-size: 11px;
}

/*Icon menu - a set of reserved classes for icon bsaed menus*/
.icon-menu ul li{
	list-style-type: none;
	padding: 0 0 0 25px;
	margin: 0 0 5px;
	background-position: left top;
	background-repeat: no-repeat;
	background-image: url(inc/images/menu-icons/q-mark.png);
}

	.icon-menu ul li a{
	}

.icon-menu ul{
	padding: 0;
}

	.icon-menu ul li.icon-clock{
		background-image: url(inc/images/menu-icons/clock.png);
	}
	
	.icon-menu ul li.icon-graph{
		background-image: url(inc/images/menu-icons/graph.png);
	}
	
	.icon-menu ul li.icon-letter{
		background-image: url(inc/images/menu-icons/letter.png);
	}
	
	.icon-menu ul li.icon-person{
		background-image: url(inc/images/menu-icons/person.png);
	}
	
	.icon-menu ul li.icon-quotes{
		background-image: url(inc/images/menu-icons/quotes.png);
	}
	
	.icon-menu ul li.icon-book{
		background-image: url(inc/images/menu-icons/book.png);
	}
	
	.icon-menu ul li.icon-signpost{
		background-image: url(inc/images/menu-icons/signpost.png);
	}
	
/*Peekaboo list styles - requires a class of peekaboo-list to be applied to the list, as well as the peekaboo plugin*/
ul.peekaboo-list{
	margin-top: 10px;
}

ul.peekaboo-list,
ul.peekaboo-list li{
	margin-left: 0px;
	list-style-type: none;
	padding: 0px;
}

	ul.peekaboo-list li a.peekaboo_link{
		padding: 3px 3px 3px 23px;
		background-color: #eee;
		display: block;
		margin: 0 0 -5px;
		background-image: url(inc/images/peekaboo-arrow.png);
		background-position: 5px center;
		background-repeat: no-repeat;
	}
	
		ul.peekaboo-list li a.peekaboo_link.peekaboo_onshow{
			background-image: url(inc/images/peekaboo-arrow-down.png);
		}
		
/*Subpage list - requires a class of subpage-list to be applied to the list*/
ul.subpage-list,
ul.subpage-list li{
	margin: 0;
	list-style-type: none;
	padding: 0;
}

	ul.subpage-list{
		margin-top: 10px;
	}

	ul.subpage-list li{
		background-color: #eee;
		padding: 5px;
		width: 45%;
		float: left;
		display: block;
		margin: 0 5px 5px 0;
	}
	
	ul.subpage-list li a{
		display: block;
		text-decoration: none;
		font-size: 16px;
	}

